--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ main {
     text-align: center; 
 }
 .attribution a { 
-    color: hsl(246, 87%, 9%);
+    color:orangered;
 }
 
 /* .bottom-icon {
